<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_prompt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_surname_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_name_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edit_text_prompt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_pw_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edit_text_prompt_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_phone_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_pw_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edit_text_prompt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_country_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_phone_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/login_phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_phone_number"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_phone"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_phone"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_pw" />

            <TextView
                android:id="@+id/login_city_text_view"
                android:layout_width="29dp"
                android:layout_height="15dp"
                android:labelFor="@id/edit_text_prompt_city"
                android:text="@string/prompt_city"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_city"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_city"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_country" />

            <TextView
                android:id="@+id/login_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_prompt_address"
                android:text="@string/prompt_address"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_address"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_address"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_city" />

            <TextView
                android:id="@+id/login_pw_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_prompt_pw"
                android:text="@string/prompt_password"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_pw"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_pw"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_email" />

            <TextView
                android:id="@+id/login_email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_prompt_email"
                android:text="@string/prompt_email"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_email"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_surname" />

            <TextView
                android:id="@+id/login_welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                app:layout_constraintBottom_toTopOf="@+id/login_name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_prompt_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_email_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_surname_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/login_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_prompt_name"
                android:text="@string/prompt_name"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_name"
                app:layout_constraintTop_toBottomOf="@+id/login_welcome_text_view" />

            <TextView
                android:id="@+id/login_surname_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_prompt_surname"
                android:text="@string/prompt_surname"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_surname"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_surname"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_name" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up_short"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_button" />

            <Button
                android:id="@+id/signin_button"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                app:layout_constraintBottom_toTopOf="@+id/signup_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_address" />

            <EditText
                android:id="@+id/edit_text_prompt_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_city_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_country_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edit_text_prompt_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/login_address_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_city_text_view"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edit_text_prompt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/signin_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_address_text_view"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/login_country_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_country"
                app:layout_constraintBottom_toTopOf="@+id/edit_text_prompt_country"
                app:layout_constraintStart_toStartOf="@+id/edit_text_prompt_country"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_prompt_phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

