<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EmergencyFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_emergency"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/emergency_button_homeviolence"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFEB3B"
        android:text="@string/emergency_button_homeviolence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/emergency_button_theft"
        app:layout_constraintTop_toBottomOf="@+id/emergency_button_naturaldisaster" />

    <Button
        android:id="@+id/emergency_button_theft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#8BC34A"
        android:text="@string/emergency_button_theft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/emergency_button_homeviolence"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergency_button_sickness" />

    <Button
        android:id="@+id/emergency_button_sickness"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E91E63"
        android:text="@string/emergency_button_sickness"
        app:layout_constraintBottom_toTopOf="@+id/emergency_button_theft"
        app:layout_constraintEnd_toStartOf="@+id/emergency_button_naturaldisaster"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_emergency" />

    <Button
        android:id="@+id/emergency_button_naturaldisaster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#2196F3"
        android:text="@string/emergency_button_naturaldisaster"
        app:layout_constraintBottom_toTopOf="@+id/emergency_button_homeviolence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/emergency_button_sickness"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_emergency" />
</androidx.constraintlayout.widget.ConstraintLayout>